--- a/pom.xml
+++ b/pom.xml
@@ -75,5 +75,11 @@
             <version>1.7</version>
             <scope>provided</scope>
         </dependency>
+        <!-- SQLite JDBC Driver - Platform-independent, taşınabilir -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.44.1.0</version>
+        </dependency>
     </dependencies>
 </project>
