Geliştirme: Çeşitli belgelerde ve sınıflarda boş satırlar eklendi. Main sınıfında asenkron görev yönetimi ve veri yükleme işlemleri optimize edildi. SQLiteDataManager'da veritabanı bağlantı kontrolü ve işlem yönetimi iyileştirildi. Ayrıca, çeşitli dinleyicilerde performans artırıcı düzenlemeler yapıldı. Bu değişiklikler, sistemin performansını artırmayı ve kodun okunabilirliğini iyileştirmeyi hedefliyor.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -794,7 +794,7 @@ game-balance:
   
   # Task Intervals (Görev Aralıkları)
   tasks:
-    mob-ride-interval: 5     # MobRideTask çalışma aralığı (tick) - 0.25 saniye
+    mob-ride-interval: 40    # MobRideTask çalışma aralığı (tick) - 2 saniye (✅ OPTİMİZE: 5'ten 40'a çıkarıldı)
   
   # Training (Antrenman) Sistemi
   training:
