--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,52 @@
                             <shadedPattern>me.mami.stratocraft.lib.customblockdata</shadedPattern>
                         </relocation>
                     </relocations>
+                    <!-- ✅ MANIFEST.MF ve Services çakışmasını çöz -->
+                    <transformers>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <manifestEntries>
+                                <Implementation-Title>${project.name}</Implementation-Title>
+                                <Implementation-Version>${project.version}</Implementation-Version>
+                                <Implementation-Vendor>${project.groupId}</Implementation-Vendor>
+                            </manifestEntries>
+                        </transformer>
+                        <!-- ✅ Services dosyalarını birleştir (java.sql.Driver gibi) -->
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                    </transformers>
+                    <!-- ✅ Çakışan dosyaları filtrele (uyarıları bastır) -->
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <!-- İmza dosyaları -->
+                                <exclude>META-INF/*.SF</exclude>
+                                <exclude>META-INF/*.DSA</exclude>
+                                <exclude>META-INF/*.RSA</exclude>
+                                <!-- Module-info dosyaları (Java 9+ modül sistemi) -->
+                                <exclude>META-INF/versions/**/module-info.class</exclude>
+                                <exclude>META-INF/versions/**/module-info</exclude>
+                                <!-- Çakışan MANIFEST.MF dosyaları (sadece dependency'lerden) -->
+                                <exclude>META-INF/MANIFEST.MF</exclude>
+                                <!-- Maven metadata (gereksiz) -->
+                                <exclude>META-INF/maven/**</exclude>
+                                <!-- LICENSE dosyaları (birleştirmek yerine exclude) -->
+                                <exclude>META-INF/LICENSE</exclude>
+                                <exclude>META-INF/LICENSE.txt</exclude>
+                                <exclude>META-INF/LICENSE.zentus</exclude>
+                                <!-- Native image dosyaları (GraalVM için, gereksiz) -->
+                                <exclude>META-INF/native-image/**</exclude>
+                                <!-- Versions klasöründeki native image dosyaları -->
+                                <exclude>META-INF/versions/**/native-image/**</exclude>
+                            </excludes>
+                        </filter>
+                        <!-- ✅ Ana proje MANIFEST.MF'sini koru -->
+                        <filter>
+                            <artifact>${project.groupId}:${project.artifactId}</artifact>
+                            <includes>
+                                <include>**</include>
+                            </includes>
+                        </filter>
+                    </filters>
                 </configuration>
                 <executions>
                     <execution>
